--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -41,7 +41,7 @@
 }
 
 .modal-phase-primero h2{
-  font-size: 1.2rem;
+  font-size: 24px;
   font-weight: bold;
   text-align: center;
   width: 100%;
@@ -58,7 +58,7 @@
 }
 
 .modal-phase-h2{
-  font-size: 2.5rem;
+  font-size: 24px;
   font-weight: bold;
   line-height: 90%;
   color: #07124B;
@@ -70,8 +70,8 @@
 }
 
 .modal-phase-name {
-  font-size: 2.2rem;
-  font-weight: bold;
+  font-size: 24px;
+
   line-height: 90%;
   color: #07124B;
   margin: 1rem 0;
@@ -83,7 +83,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   line-height: 90%;
-  color: #07124B;
+  color: #5B5B5B;
   margin: 2rem 0;
   width: 100%;
   text-align: center;
