--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -33,6 +33,7 @@
 
 .modal-phase-primero{
   display: flex;
+  width: 85%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
