--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -167,3 +167,11 @@ background-color: #e0e0e0;
   background-color: #e0e0e0;
   border: 3px solid #000000;
 }
+
+
+.button-siguiente  {
+  background-color: #07124b;
+  color: #cccccc;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+}
