--- a/client/src/components/formularioPack/formularioPack.css
+++ b/client/src/components/formularioPack/formularioPack.css
@@ -37,21 +37,9 @@
   transition: all 0.3s
 }
 
-
-/* Es el boton de anterior por si nos dicen de ponerlo, por ahora lo muestro, para ocultarlo descomentar la linea */
-/* .button-siguiente  {
-  margin-left: 10px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #000080;
-  transition: all 0.3s;
-  display: none;
-
-} */
-
+.flecha-anterior {
+  font-size: 3rem;
+}
 
 .questionForm-pack  {
   font-size: 75px;
@@ -156,4 +144,11 @@ background-color: #e0e0e0;
 
 .modal-phase-primero {
   margin-bottom: 2rem; ;
+}
+
+.button-siguiente  {
+  background-color: #07124b;
+  color: #cccccc;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
 }
