--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -133,9 +133,112 @@
   }
   
 
+  /*Modal SaberMas*/
 
-@media screen and (max-width: 720px) {
+  .modalSaber{
+    margin-top:65px;
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+  }
+
+.modalSaber-body {
+    background-color: rgba(255, 253, 253, 0.795);
+    width:90%;
+    margin: auto;
+    min-height:50%;
+    border-radius:15px;
+    padding:2rem;
+    position: relative;
+    height: 75%;
+    overflow-y: auto;
+  }
+.modalSaber-header {
+    border-radius:15px;
+    padding:2rem;
+    position: relative;
+    overflow-y: auto;
+    text-align: justify;
+}
+    .modalSaber-objetivo {
+    margin: 1rem 0;
+    width: 100%;
+  }
+  .objetivo{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 100%;
+    height: 100px;
+    text-align: justify;
+  }
+  .modalSaber-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+
+.modalSaber-desarrollo {
+    margin: 1rem 0;
+    width: 50%;
+    border: 1px solid #5B5B5B;
+  }
+  .desarrolloTitulo{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 100%;
+    height:50%;
+    text-align: justify;
+  }
+  .desarrolloContent{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 90%;
+    height: 180px;
+    text-align: justify;
+  }
+  .modalSaber-duracion {
+    margin: 1rem 0;
+    width: 100%;
+    border: 1px solid #5B5B5B;
+  }
+  .duracionTitulo{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 100%;
+    height:50%;
+    text-align: justify;
+  }
+  .duracionContent{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 90%;
+    height: 200px;
+    text-align: justify;
+  }
+.duracionContent{
+    font-size: 16px;
+    color: #5B5B5B;
+    width: 90%;
+    height: 200px;
+    text-align: justify;
+}
+.modalSaber-izquierda {
+    margin: 1rem 0;
+    width: 30%;
+    display:flex;
+    justify-content: center ;
+    align-items: center;
+    gap: 30px;
+    flex-direction: column;
+
+  }
+
+
+/* @media screen and (max-width: 720px) {
     .modal-body {
         width: 65%;
     }
-}
+} */
