--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -145,21 +145,22 @@
 
 .modalSaber-body {
     background-color: rgba(255, 253, 253, 0.795);
-    width:90%;
+    width:100%;
     margin: auto;
     min-height:50%;
     border-radius:15px;
     padding:2rem;
     position: relative;
-    height: 75%;
+    height: 100%;
     overflow-y: auto;
   }
 .modalSaber-header {
     border-radius:15px;
-    padding:2rem;
     position: relative;
     overflow-y: auto;
     text-align: justify;
+    border-bottom: 6px dashed rgb(250, 235, 98)
+
 }
     .modalSaber-objetivo {
     margin: 1rem 0;
@@ -177,20 +178,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
   }
 
 .modalSaber-desarrollo {
-    margin: 1rem 0;
-    width: 50%;
-    border: 1px solid #5B5B5B;
+    width: 60%;
   }
   .desarrolloTitulo{
-    font-size: 16px;
-    color: #5B5B5B;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #f3a813;
+    border-radius: 10px 10px 0 0;
     width: 100%;
-    height:50%;
-    text-align: justify;
+    height:100%;
+    text-align: center;
   }
   .desarrolloContent{
     font-size: 16px;
@@ -199,23 +200,41 @@
     height: 180px;
     text-align: justify;
   }
+
+  .modalSaber-izquierda {
+    width: 20%;
+    height: 10%;
+    display:flex;
+    justify-content: center ;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+
+  }
   .modalSaber-duracion {
-    margin: 1rem 0;
     width: 100%;
-    border: 1px solid #5B5B5B;
+    height: 150px;
+    padding: 20px 0;
+    display:flex;
+    justify-content: center ;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
   }
   .duracionTitulo{
-    font-size: 16px;
-    color: #5B5B5B;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #f3a813;
+    border-radius: 10px 10px 0 0;
     width: 100%;
-    height:50%;
-    text-align: justify;
+    height:100%;
+    text-align: center;
   }
   .duracionContent{
     font-size: 16px;
     color: #5B5B5B;
-    width: 90%;
-    height: 200px;
+    width: 100%;
+    height: 10px;
     text-align: justify;
   }
 .duracionContent{
@@ -225,17 +244,17 @@
     height: 200px;
     text-align: justify;
 }
-.modalSaber-izquierda {
-    margin: 1rem 0;
-    width: 30%;
-    display:flex;
-    justify-content: center ;
-    align-items: center;
-    gap: 30px;
-    flex-direction: column;
 
-  }
-
+.buttonSaberMas {
+    background-color: #07124B;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    width: 100%;
+    height: 50px;
+    margin-top: 0;
+}
 
 /* @media screen and (max-width: 720px) {
     .modal-body {
