--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -63,6 +63,19 @@
     overflow-y: auto;
 }
 
+.modal-body-modulos {
+  background-color: rgba(255, 253, 253, 0.9);
+  width:85%;
+  margin: 100px auto;
+  min-height:50%;
+  border-radius:15px;
+  padding:2rem;
+  position: relative;
+  height: 80%;
+  overflow-y: auto;
+  z-index: 6;
+}
+
 .button-modal-continue {
     background-color: #07124B;
     color: white;
@@ -145,13 +158,13 @@
 
 .modalSaber-body {
     background-color: rgba(255, 253, 253, 0.795);
-    width:100%;
+    width:90%;
     margin: auto;
     min-height:50%;
     border-radius:15px;
     padding:2rem;
     position: relative;
-    height: 100%;
+    height: 90%;
     overflow-y: auto;
   }
 .modalSaber-header {
