--- a/client/src/components/scrollButton/ScrollButton.css
+++ b/client/src/components/scrollButton/ScrollButton.css
@@ -1,19 +1,20 @@
 .scroll-button {
     height: 40px;
     width: 100%;
-    background-color: #fff;
+    background-color: rgba(142, 149, 184, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 4;
-    font-size: 16px;
-    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: bold;
     color: #050E3C;
     cursor: pointer;
     position: relative;
     bottom: 150px;
     left: 0;
     top: 0;
+    
   }
 
   @media screen and (max-width: 800px) {
