--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -65,13 +65,13 @@
 
 .modal-body-modulos {
   background-color: rgba(255, 253, 253, 0.9);
-  width:85%;
-  margin: 100px auto;
+  width:80%;
+  margin: 160px auto;
   min-height:50%;
   border-radius:15px;
-  padding:2rem;
+  padding:20px;
   position: relative;
-  height: 80%;
+  height: 70%;
   overflow-y: auto;
   z-index: 6;
 }
