mensajes del mail

--- a/client/src/components/formacion/Programas/Programas.css
+++ b/client/src/components/formacion/Programas/Programas.css
@@ -31,3 +31,18 @@
 .negrita {
     font-weight: bold;
 }
+.interrogacionFormacion{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1500px;
+    padding: 20px;
+}
+
+.tituloFormacion{
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
