--- a/client/src/components/formularioPack/formularioPack.css
+++ b/client/src/components/formularioPack/formularioPack.css
@@ -32,6 +32,12 @@
   font-size: 3rem;
 }
 
+.preguntaInterrogacion {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
 .questionForm-pack  {
   font-size: 75px;
   font-weight: bold;
@@ -101,7 +107,40 @@ background-color: #e0e0e0;
 
 .button-siguiente  {
   background-color: #07124b;
-  color: #cccccc;
+  color: #ffffff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border: 2px solid #cccccc;
+  border-radius: 10px;
+  padding: 15px 25px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+  height: 57px;
+  max-width: 350px;
+  width: 400px;
+  margin-top: 80px;
+}
 
+.button-enviar {
+  background-color: #ffffff;
+  color: #07124b;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border: 3px solid #000000;
+  border-radius: 10px;
+  padding: 15px 25px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+  height: 57px;
+  max-width: 350px;
+  width: 400px;
+  margin-top: 80px;
 }
