--- a/client/src/components/formacion/DescubreF/DescubreF.css
+++ b/client/src/components/formacion/DescubreF/DescubreF.css
@@ -21,6 +21,8 @@
 
 /* Estilos para el contenedor interno de "descubre" */
 .descubre {
+    width: 100%;
+    margin: 0 0 0 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
