--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -137,7 +137,7 @@ background-color: #e0e0e0;
 }
 
 .button-enviar {
-  background-color: #ffffff;
+  background-color: #6befc5;
   color: #07124b;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border: 3px solid #000000;
