--- a/client/src/components/packCard/packCard.css
+++ b/client/src/components/packCard/packCard.css
@@ -42,22 +42,26 @@
 }
 
 .pack1 {
+  border: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .pack2 {
+  border: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;}
 
 .pack3 {
+  border: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;}
 
 .pack4 {
+  border: 1px solid #e0e0e0;
   display: flex;
   align-items: center;
   justify-content: center;}
