--- a/client/src/components/packs/packList.css
+++ b/client/src/components/packs/packList.css
@@ -15,7 +15,7 @@
     margin-right: 20px; 
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    /* justify-content:center; */
     gap: 20px;
     padding: 20px;
     height: 600px;
