--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -196,6 +196,7 @@
 
 .modalSaber-desarrollo {
     width: 60%;
+    height: 300px;
   }
   .desarrolloTitulo{
     font-size: 20px;
@@ -203,7 +204,7 @@
     background-color: #f3a813;
     border-radius: 10px 10px 0 0;
     width: 100%;
-    height:100%;
+    height:35px;
     text-align: center;
   }
   .desarrolloContent{
@@ -215,11 +216,12 @@
   }
 
   .modalSaber-izquierda {
-    width: 20%;
-    height: 10%;
+    width: 300px;
+    height: 100%;
     display:flex;
     justify-content: center ;
-    align-items: center;
+    align-items:flex-start;
+    align-self:flex-start;
     gap: 20px;
     flex-direction: column;
 
@@ -227,7 +229,6 @@
   .modalSaber-duracion {
     width: 100%;
     height: 150px;
-    padding: 20px 0;
     display:flex;
     justify-content: center ;
     align-items: center;
@@ -241,6 +242,7 @@
     border-radius: 10px 10px 0 0;
     width: 100%;
     height:100%;
+    padding: 2px 0 ;
     text-align: center;
   }
   .duracionContent{
