--- a/client/src/components/consultoria/comienzo/Comienzo.css
+++ b/client/src/components/consultoria/comienzo/Comienzo.css
@@ -26,7 +26,7 @@
 .comienzotexto h2 {
     font-size: 50px;
     font-weight: bold;
-    text-align: justify; 
+    text-align: left; 
     margin:300px 0 0 0;
   
 }
