--- a/client/src/components/formacion/ComienzoF/ComienzoF.css
+++ b/client/src/components/formacion/ComienzoF/ComienzoF.css
@@ -29,7 +29,7 @@
 .Fcomienzotexto h2 {
     font-size: 40px;
     font-weight: bold;
-    text-align: justify; 
+    text-align: left; 
     margin:300px 0 0 0;
     color: black;
   
