--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -21,7 +21,7 @@ body {
   height: 150px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
 }
